Rename class ScheduleFixUtils by ScheduleUtils